--- a/Lab3. Light Bot/LED Bot/packages.config
+++ b/Lab3. Light Bot/LED Bot/packages.config
@@ -17,4 +17,5 @@
   <package id="PCLCrypto" version="1.0.86" targetFramework="net46" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net46" />
   <package id="Validation" version="2.0.6.15003" targetFramework="net46" />
+  <package id="WindowsAzure.ServiceBus" version="3.4.0" targetFramework="net46" />
 </packages>
