--- a/Lab4. ReactionToCloud/Measure Reaction/project.json
+++ b/Lab4. ReactionToCloud/Measure Reaction/project.json
@@ -3,9 +3,8 @@
     "Microsoft.ApplicationInsights": "1.0.0",
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.0.0",
     "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
-    "Microsoft.Azure.Devices.Client": "1.0.7",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Newtonsoft.Json": "8.0.3"
+    "Microsoft.Azure.Devices.Client": "1.0.21",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0"
   },
   "frameworks": {
     "uap10.0": {}
